trunk/Archive2/b8/993e62662cbada/output
main.cpp: In function 'int main()':
main.cpp:10:8: error: invalid initialization of reference of type 'const std::unique_ptr<Base>&' from expression of type 'std::unique_ptr<Derived>'
     f(x);
        ^
main.cpp:6:6: note: in passing argument 1 of 'void f(const std::unique_ptr<Base>&)'
 void f(std::unique_ptr<Base> const&);
      ^
